[package]
name = "new_interpreter"
version = "0.1.0"
authors = ["Arturo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
indexmap = { version = "2.1.0", features = ["serde"] }
itertools = "0.13.0"
ahash = "0.8.7"
bstr = "1.8.0"
peg = "0.8.2"
mimalloc = "0.1.39"
derive_more = "0.99.17"
paste = "1.0.12"
colored = "2.1.0"
rand = "0.8.5"
regex = "1.10.2"
ariadne = "0.4.0"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
#strip = true
debug = true
lto = true
codegen-units = 1
panic = "abort"
